step 2. task and client's part(pushing)

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,7 +60,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -79,7 +79,7 @@
       and concatenated into a single file.
 
       To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
-      For example, here are a few things you could do:
+      For example, here are a few things you culd do:
 
           + Change the order of your scripts
           + Import scripts from other directories
